- https://github.com/eclipse-sirius/sirius-web/issues/2253[#2253] [diagram] The indroduction of ToolSection in palette, change the _DiagramDescription_ structure by adding a new level _Palette_ instead of _[ToolSection]_.
Note that _palette_ will be removed in short-term from the _DiagramDescription_.

=== Dependency update

- [releng] Switch to `typescript` 5.1.6
- [releng] Switch to `vite` 4.4.9
- [releng] Switch to `vitest` 0.34.2
- [releng] Switch to `@vitejs/plugin-react` 4.0.4
- [releng] Switch from `c8` to `@vitest/coverage-v8` 0.34.2 as now recommended
- [releng] Switch to `graphql` 16.8.0
- [releng] Switch to `@apollo/client` 3.8.1
- [releng] Switch to `reactflow` 11.8.1
- [releng] Switch to Spring Boot 3.1.2
- [releng] Switch to Sirius Desktop 7.2.0
- [releng] The frontend now depends on `html-to-image` to support the "export to SVG" action in the diagram panel of the react-flow prototype (see https://github.com/eclipse-sirius/sirius-web/issues/2296[#2296])
- [releng] Switch to `org.apache.xmlgraphics:batik-bridge` 1.17

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-components/issues/2222[#2222] [tree] Fix an issue where all the tree items where editable, even for elements that have no label.
- https://github.com/eclipse-sirius/sirius-web/issues/2245[#2245] [sirius-web] Fix an issue when triggering expandAll on models with multiple root objects.
- https://github.com/eclipse-sirius/sirius-web/issues/2333[#2333] [diagram] Fix a warning console when opening a palette on a diagram.
- https://github.com/eclipse-sirius/sirius-web/issues/2345[#2345] [diagram] Fix a issue on React Flow diagram when opening a palette with toolSection without nodeTool.
- https://github.com/eclipse-sirius/sirius-web/issues/2192[#2192] [view] Fix an issue where the _Shape_ property of an ImageNodeStyle was not mandatory.
An error message is now displayed if the _Shape_ is not set.