@@ -25,7 +25,7 @@ public class SpringCodingRulesTests extends AbstractSpringCodingRulesTests {
 
     @Override
     protected String getProjectRootPackage() {
-        return ArchitectureConstants.SIRIUS_COMPONENTS_COLLABORATIVE_FORMS_ROOT_PACKAGE;
+        return ArchitectureConstants.SIRIUS_COMPONENTS_COLLABORATIVE_WIDGET_REFERENCE_ROOT_PACKAGE;
     }
 
     @Override
